Change image in zoom function

--- a/src/app/OrganizationChart/organization-chart/organization-chart.component.html
+++ b/src/app/OrganizationChart/organization-chart/organization-chart.component.html
@@ -2,7 +2,7 @@
 
     <!-- OPTIONAL: zoom button with an ugly png -->
     <button zoom-button class="zoom-button" (click)="exampleChart.toggleZoom()">
-        <img src="assets/zoom-in-out.png" width="100%" alt="ZoomInOut">
+        <img src="assets/images/ironman.png" width="100%" alt="ZoomInOut">
     </button>
 
 </angular-org-chart>
